Checkboxes changed. Search-form size changed. Scrollbar hidden.Buttons repaired

--- a/styles/style.css
+++ b/styles/style.css
@@ -76,7 +76,18 @@ ol {
   gap: 40px;
 }
 
+.search-form__label {
+  width: fit-content;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: #fff solid 1px;
+  outline-offset: 1px;
+}
+
 .search-form__fieldset {
+  width: fit-content;
+  align-self: flex-start;
   border: none;
   font-family: "Fira Sans Condensed";
   font-size: 18px;
@@ -94,7 +105,7 @@ ol {
 }
 
 .search-form__textfield {
-  width: 100%;
+  width: 225px;
   color: rgba(255, 255, 255, 0.70);
   font-family: "Fira Sans Condensed";
   font-size: 18px;
@@ -105,12 +116,50 @@ ol {
   border: none;
   border-top: 1px solid #FFF;
   border-bottom: 1px solid #FFF;
+  appearance: none;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__checkbox-list {
+  /* display: inline-block; */
+  width: 212px;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  border: #fff solid 1px;
+}
+
+.search-form__pseudo-checkbox::after
+
+.search-form__label:hover {
+  text-decoration: underline #fff;
+  cursor: pointer;
 }
 
 .button {
   color: #fff;
   background-color: transparent;
   border: 1px solid #fff;
+  cursor: pointer;
+  font-family: "Fira Sans Condensed";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.button:hover {
+  text-decoration: underline #fff;
+}
+
+.button:active {
+  background-color: #545050;
 }
 
 .search-form__submit-button {
@@ -119,7 +168,7 @@ ol {
 }
 
 .content__details {
-  width: 100%;
+  width: 399px;
   height: 100%;
 }
 
@@ -140,6 +189,7 @@ ol {
   height: 298px;
   overflow: auto;
   position: relative;
+  scrollbar-width: none;
 }
 
 .content__list-item:not(:last-of-type) {
@@ -151,8 +201,17 @@ ol {
 }
 
 .content__video-card {
+  height: 103px;
   display: flex;
   align-items: flex-start;
+}
+
+.content__video-card:hover {
+  text-decoration: underline #fff;
+}
+
+.content__video-card:active {
+  background-color: #545050; 
 }
 
 .content__video-card-title {
@@ -178,9 +237,15 @@ ol {
 }
 
 .content__video-card-thumbnail {
-  width: 194px;
-  max-height: 103px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
+.more-button {
+  width: 100%;
+  margin-bottom: 2px;
+  font-weight: 400;
+  line-height: 1.6;
+}
 
